# java-sdk

./: .gitignore  BUILD.bazel  README.md  build.gradle
src/main/java/com/telequick/sdk/: MethodID.java  TeleQuickClient.java
src/test/java/com/telequick/sdk/: ClientTest.java
